--- a/quotes/templates/quotes/base.html
+++ b/quotes/templates/quotes/base.html
@@ -1,4 +1,8 @@
 {% load static %}
+{% load django_htmx %}
+{% load django_bootstrap5 %}
+{% bootstrap_css %}
+{% bootstrap_javascript %}
 
 <!doctype html>
 <html lang="en">
@@ -8,14 +12,14 @@
     <meta name="keywords" content="Quotes, Quoteboard">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Quoteboard</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
+    {% htmx_script %}
     {% block head %}{% endblock %}
   </head>
-  <body>
+  <body hx-headers='{"x-csrftoken": "{{ csrf_token }}"}'>
     {% block body %}
     {% endblock %}
     {% block scripts %}
     {% endblock %}
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
   </body>
 </html>
