--- a/quotes/templates/quotes/board.html
+++ b/quotes/templates/quotes/board.html
@@ -1,12 +1,61 @@
 {% extends 'quotes/base.html' %}
 {% load static %}
+{% load django_bootstrap5 %}
 
 {% block body %}
 <div class="container text-center">
-  <div class="row">
+
+  <!-- Add quote button -->
+  <button
+    type="button"
+    class="btn btn-primary btn-lg rounded-circle position-absolute top-0 end-0 me-3 mt-3 d-flex align-items-center justify-content-center"
+    style="width: 3rem; height: 3rem;"
+    hx-get="{% url 'add-quote' board.code %}"
+    hx-target="#addQuoteDialog"
+  >
+    <i class="bi bi-plus"></i>
+  </button>
+  
+  <!-- AddQuoteModel Placeholder -->
+  <div id="addQuoteModal" class="modal fade" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+      <div id="addQuoteDialog" class="modal-dialog modal-dialog-centered modal-lg" hx-target="this"></div>
+  </div>
+
+  <!-- Content -->
+  <div class="row mt-3">
     <div class="col">
       <h1>{{ board.name }}</h1>
     </div>
   </div>
 </div>
+{% endblock %}
+
+{% block scripts %}
+<script>
+
+    // Driver for the remove modal
+    // ======================================================================
+    const addQuoteModal = new bootstrap.Modal(document.getElementById("addQuoteModal"))
+
+    htmx.on("htmx:afterSwap", (e) => {
+        // Response targeting #dialog => show the modal
+        if (e.detail.target.id == "addQuoteDialog") {
+            addQuoteModal.show()
+        }
+    })
+
+    htmx.on("htmx:beforeSwap", (e) => {
+        // Empty response targeting #dialog => hide the modal
+        if (e.detail.target.id == "addQuoteDialog" && !e.detail.xhr.response) {
+            addQuoteModal.hide()
+          e.detail.shouldSwap = false
+        }
+      })
+
+      // flush to prevent users to see old content in a fash
+      htmx.on("hidden.bs.modal", () => {
+        document.getElementById("addQuoteDialog").innerHTML = ""
+      })
+      // ======================================================================
+</script>
 {% endblock %}
