--- a/quotes/templates/quotes/base.html
+++ b/quotes/templates/quotes/base.html
@@ -19,6 +19,8 @@
   <body hx-headers='{"x-csrftoken": "{{ csrf_token }}"}'>
     {% block body %}
     {% endblock %}
+
+    <script src="https://cdn.jsdelivr.net/npm/htmx.org@2.0.7/dist/htmx.min.js"></script>
     {% block scripts %}
     {% endblock %}
   </body>
