--- a/quotes/templates/quotes/board.html
+++ b/quotes/templates/quotes/board.html
@@ -17,14 +17,17 @@
   </button>
   
   <!-- AddQuoteModel Placeholder -->
-  <div id="addQuoteModal" class="modal fade" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-      <div id="addQuoteDialog" class="modal-dialog modal-dialog-centered modal-lg" hx-target="this"></div>
+  <div id="addQuoteModal" class="modal fade" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+      <div id="addQuoteDialog" class="modal-dialog modal-lg" hx-target="this"></div>
   </div>
 
   <!-- Content -->
   <div class="row mt-3">
     <div class="col">
       <h1>{{ board.name }}</h1>
+      {% for b in board.quotes.all %}
+      <p>{{ b.text }}</p>
+      {% endfor %}
     </div>
   </div>
 </div>
