--- a/quotes/templates/quotes/partials/addQuoteModal.html
+++ b/quotes/templates/quotes/partials/addQuoteModal.html
@@ -6,14 +6,13 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
     </div>
     <div class="modal-body">
-        TEST
+        <form id="addQuoteForm" hx-post="{{ request.path }}">
+            {% bootstrap_field form.text layout="floating" %}
+            {% bootstrap_field form.author layout="floating" %}
+        </form>
     </div>
     <div class="modal-footer">
-        <form hx-post="{{ request.path }}">
-            {% csrf_token %}
-
-            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-            <button type="submit" class="btn btn-danger">Confirm</button>
-        </form>
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="submit" class="btn btn-primary" form="addQuoteForm">Confirm</button>
     </div>
 </div>
