random fonts and quotes in 3 columns

--- a/quotes/templates/quotes/base.html
+++ b/quotes/templates/quotes/base.html
@@ -13,6 +13,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Quoteboard</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Barrio&family=Bitter:ital,wght@0,100..900;1,100..900&family=Borel&family=Caveat:wght@400..700&family=Coming+Soon&family=Damion&family=Delicious+Handrawn&family=Fontdiner+Swanky&family=Gluten:wght@100..900&family=Google+Sans+Code:ital,wght@0,300..800;1,300..800&family=Homemade+Apple&family=Knewave&family=Leckerli+One&family=Lily+Script+One&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Mynerve&family=Oldenburg&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Pacifico&family=Playwrite+US+Modern:wght@100..400&family=Playwrite+US+Trad:wght@100..400&family=Shadows+Into+Light+Two&family=The+Girl+Next+Door&family=Tilt+Prism&family=Workbench&family=Yellowtail&display=swap" rel="stylesheet">
+
     {% htmx_script %}
     {% block head %}{% endblock %}
   </head>
