--- a/quotes/templates/quotes/board.html
+++ b/quotes/templates/quotes/board.html
@@ -31,8 +31,10 @@
   <div class="row mt-3">
     <div class="col">
       <h1>{{ board.name }}</h1>
-      <div hx-trigger="quoteListChanged from:body" hx-get="{% url 'load-quotes' board.code %}" hx-target="this"></div>
     </div>
+  </div>
+  <div class="row mt-3">
+    <div hx-trigger="quoteListChanged from:body" hx-get="{% url 'load-quotes' board.code %}" hx-target="this"></div>
   </div>
 </div>
 {% endblock %}
